Add red tint danger effect